Menu alignment and color fix

--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -45,4 +45,4 @@ $primary-color: #000000;
 $theme-color: #464646;
 $secondary-color: #6626EE;
 $bg-color: #ffffff;
-$content-color: #E5E5E5;
+$content-color: #e5e5e55c;
